--- a/贪吃蛇.html
+++ b/贪吃蛇.html
@@ -37,10 +37,10 @@
 			this.foodNow = {};
 			//容器属性
 			this.container = {
-				length_x: 10,
-				length_y: 10,
-				height: 30,
-				width: 30
+				length_x: 20,
+				length_y: 20,
+				height: 20,
+				width: 20
 			};
 			this.firstNode = {
 				x: 2,
@@ -77,7 +77,10 @@
 				head_color: 'red',
 				body_color: 'blue',
 				food_color: 'green',
-				init_length: 3
+				init_length: 3,
+        init_speed: 2,
+        time: 0.2,
+        direction:{x:1, y:0}
 			};
 
 			initContainer();
@@ -104,6 +107,9 @@
 				renderData();
         initFoodContainer();
 				randomFood();
+        setInterval(()=>{
+          moveForward(snake_init.direction);
+        }, snake_init.time * 1000);
 			}
 
 			function moveNode({
@@ -170,6 +176,7 @@
 				if (is_self(temp_head)) {
 					return die_msg('不能吃自己！！');
 				}
+        snake_init.direction = {x:x, y:y};
 				if ( temp_head.x === foodNow.x && temp_head.y === foodNow.y ) {
 					addNode(temp_head);
 				} else {
